commit to branch

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div style="font-family: 'Courier New', Courier, monospace ;">
-        "huyak"
+        "huyaks"
     </div>
     
 </body>
